# browser-image-enhancer

./: .gitignore  LICENSE  README.md  project-instructions.md
.github/workflows/: ci.yml
docs/: color-math.md  decisions.md  eval-report.md  spec.md
ml/: pyproject.toml
ml/src/imageenh/: colormath.py  dataset.py  evaluate.py  export_golden.py  export_weights.py  heuristic.py  model.py  tfmath.py  train.py
ml/tests/: test_colormath.py  test_tfmath.py
reference-images/: manifest.json  manifest.md
scripts/: fetch-dataset.sh  make-fixtures.py  make-reference-pool.py  make-samples.py  run-bench.cjs  size-budget-check.mjs
web/: index.html  package-lock.json  package.json  playwright.config.ts  probe.html  tsconfig.json  vite.config.ts
web/e2e/: enhance.spec.ts  probe.spec.ts
web/e2e/fixtures/: sample.heic
web/public/model/: manifest.json
web/public/samples/: probe.heic
web/src/demo/: main.ts  probe.ts  style.css
web/src/lib/: index.ts  types.ts  worker.ts
web/src/lib/analyze/: heuristic.ts
web/src/lib/apply/: enhance.ts
web/src/lib/codec/: bmp.ts  decode.ts  encode.ts  heic.ts  libheif.d.ts  sniff.ts
web/src/lib/nn/: engine.ts  predict.ts  weights.ts
web/tests/: bmp.test.ts  colormath.golden.test.ts  nn.golden.test.ts  sniff.test.ts
web/tests/golden/: colormath.json  nn.json
