[project]
name = "imageenh"
version = "1.0.0"
description = "Training and evaluation tooling for the browser image enhancer"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.0",
    "pillow>=11.0",
]

[project.optional-dependencies]
train = [
    "tensorflow>=2.18",
]
eval = [
    "scikit-image>=0.25",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imageenh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
